Implement repository and service for Tag entity (#40)
* feat: implemented repository and service for Tag entity

* feat: added Update and Delete methods for ServiceImpl

* fix: fixed updateTag method by review

* refactor: cleared error handling in TagServiceImpl class